modified image file name

--- a/main.html
+++ b/main.html
@@ -24,22 +24,22 @@ article,aside,dialog,figure,footer,header,hgroup,menu,nav,section {display: bloc
 <body>
     <div id="menu">menu</div>
     <div id="all">
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
         <a href="#player1_title">player1</a>
         <a href="#player2_title">player2</a>
         <a href="#player3_title">player3</a>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
 
     <div id="player1_title">player</div>
     <div class="table">
@@ -50,17 +50,17 @@ article,aside,dialog,figure,footer,header,hgroup,menu,nav,section {display: bloc
         <button class="player_button" value="player1">start</button>
     </div>
     </div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
         <a href="#player2_title">player2</a>
         <a href="#player3_title">player3</a>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
 
     <div id="player2_title">player2</div>
     <div class="table">
@@ -71,16 +71,16 @@ article,aside,dialog,figure,footer,header,hgroup,menu,nav,section {display: bloc
         <button class="player_button" value="player2">start</button>
     </div>
     </div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
         <a href="#player3_title">player3</a>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
-    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/square03.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
+    <div style="width: 320px;height:100px;"><img class="sample" alt="hoge" src="image/green.png"></div>
 
     <div id="player3_title">player3</div>
     <div class="table">
